Preparando para deploy